<resources>
    <string name="app_name">ClientWallet</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_new_client">NewClientActivity</string>

    <string name="labelClientName">Nombre:</string>
    <string name="labelClientAddress">Direccion:</string>
    <string name="labelClientEmail">E-mail:</string>
    <string name="labelClientPhone">Telefono:</string>

    <string name="hintClientName">Ingrese su nombre ...</string>
    <string name="hintClientAddress">Ingrese su direccion ...</string>
    <string name="hintClientEmail">Ingrese su e-mail ...</string>
    <string name="hintClientPhone">Ingrese su telefono ...</string>
    
    <string name="actionTitleOk">Ok</string>
    <string name="actionTitleCancel">Cancelar</string>
</resources>
