<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".NewClientActivity"
    tools:showIn="@layout/activity_new_client"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/labelClientName" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintClientName" />

    <TextView
        android:id="@+id/textView02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/labelClientAddress" />

    <EditText
        android:id="@+id/editAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintClientAddress" />

    <TextView
        android:id="@+id/textView03"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/labelClientEmail" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintClientEmail" />

    <TextView
        android:id="@+id/textView04"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/labelClientPhone" />

    <EditText
        android:id="@+id/editPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintClientPhone" />
</LinearLayout>